<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:orientation="vertical"
    android:background="@color/purple_500"
    android:padding="20dp"
    android:gravity="bottom|center">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/this_is_the_image"
        android:src="@drawable/finallogo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/original_surfer"
        android:text="@string/roomyy"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/original_surfer"
        android:text="@string/find_your_dream_stay"
        android:textColor="@color/white"
        android:textSize="20sp" />


</LinearLayout>