<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".Register">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/pass"
        android:layout_width="317dp"
        android:layout_height="49dp"
        android:layout_marginTop="84dp"
        android:hint="@string/confirm_password"
        android:drawableStart="@drawable/baseline_lock_24"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:drawablePadding="10dp"
        android:inputType="textPassword"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="223dp"
        android:textStyle="bold"
        android:layout_height="59dp"
        android:text="@string/registerrr"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="317dp"
        android:layout_height="49dp"
        android:hint="@string/enter_your_email"
        android:backgroundTint="@color/black"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.021" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="317dp"
        android:layout_height="49dp"
        android:hint="@string/password_at_least_6_characters"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:backgroundTint="@color/black"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.514" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        app:layout_constraintVertical_bias="0.406" />

    <Button
        android:id="@+id/register"
        android:layout_width="149dp"
        android:background="@drawable/button"
        android:layout_height="59dp"
        android:textColor="@color/white"
        android:layout_marginBottom="136dp"
        android:text="@string/reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/loginNow"
        android:layout_width="248dp"
        android:layout_height="53dp"
        android:gravity="center"
        android:text="@string/click_to_loginn"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:contentDescription="@string/todo2"
        android:foregroundGravity="center"

        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691"
        app:srcCompat="@drawable/user" />


</androidx.constraintlayout.widget.ConstraintLayout>