<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawerLayout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_weight="1"
tools:openDrawer="start"
android:fitsSystemWindows="true"
tools:context=".SliderHome">


<com.google.android.material.navigation.NavigationView
    android:id="@+id/navigation_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layout_gravity="start"
    app:headerLayout="@layout/headerfile"
    app:menu="@menu/sidenav" />




<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerr"
            android:layout_width="match_parent"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="9dp"
            android:layout_marginStart="9dp"


            android:layout_height="230dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/toolbar_color"



            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:title="Home"

            app:titleMarginStart="30dp"
            app:titleTextColor="@color/white" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/frame_con"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navbar" >

        <LinearLayout
            android:id="@+id/linearlay2"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="520dp"
            android:orientation="horizontal"


            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="2dp"
                app:cardMaxElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <ImageView
                        android:id="@+id/roomsimage3"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/flatimg"
                        app:srcCompat="@drawable/headimg" />

                    <TextView
                        android:id="@+id/secondMenuText1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/roomsimage3"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="5dp"
                        android:fontFamily="serif"
                        android:text="@string/flats" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="2dp"
                app:cardMaxElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/rooms"
                        app:srcCompat="@drawable/findroomopt" />

                    <TextView
                        android:id="@+id/secondMenuText2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageView5"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="5dp"
                        android:fontFamily="serif"
                        android:text="@string/about_us"
                        tools:ignore="ExtraText" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlay"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="340dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="2dp"
                app:cardMaxElevation="2dp">

                <RelativeLayout
                    android:id="@+id/rel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <ImageView
                        android:id="@+id/roomsimage"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/head"
                        app:srcCompat="@drawable/menuone" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/roomsimage"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="5dp"
                        android:fontFamily="serif"
                        android:text="@string/rooms" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="2dp"
                app:cardMaxElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/iamgee"
                        app:srcCompat="@drawable/menuone" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageView4"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="5dp"
                        android:fontFamily="serif"
                        android:text="@string/pg" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </FrameLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_400"
        android:layout_alignParentBottom="true"
        app:menu="@menu/botmenu" />
</RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>









